--- a/index.html
+++ b/index.html
@@ -34,5 +34,28 @@
         
         </nav>
 
+        <section id="home">
+
+            <div class="home_container container">
+
+                <h2 class="home_title">We are Bite Burger  😋</h2>
+                <p class="home_description">We are a enterprice that has gained 
+                recognition for our exceptional burgers, which are quite large,
+                and for the exceptional prices we offered.Our recognition was 
+                made because many famous people liked our burgers.
+                </p>
+
+                <div class="btn_container">
+                    <a href="#order-now" class="btn">Order Now</a>
+                </div>
+
+                <div class="home_img">
+                    <img src="https://acortar.link/ChhiB5" alt="burger">
+                </div>
+
+            </div>
+
+        </section>
+        
     </body>
  </html>
