--- a/index.html
+++ b/index.html
@@ -57,5 +57,68 @@
 
         </section>
         
+        <section id="products">
+            <div class="products_container container">
+                <h2 class="products_title">Products</h2>
+                <p class="products_description">The types of burgers we produce are 
+                as follows.
+                </p>
+                <div class="burger_container">
+                        <div class="content">
+                            <img src="https://acortar.link/tdx4Fz" alt="classic_burger">
+                            <h3>Classic Burger</h3>
+                            <span class="price">$5 - $10</span>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <a href="#order-now" class="btn_" >Order Now</a>
+                        </div>
+                        <div class="content">
+                            <img src="https://acortar.link/tdx4Fz" alt="classic-burger">
+                            <h3>Classic Burger</h3>
+                            <span class="price">$5 - $10</span>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <a href="#order-now" class="btn_" >Order Now</a>
+                        </div>
+                        <div class="content">
+                            <img src="https://acortar.link/tdx4Fz" alt="classic-burger">
+                            <h3>Classic Burger</h3>
+                            <span class="price">$5 - $10</span>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <a href="#order-now" class="btn_" >Order Now</a>
+                        </div>
+                        <div class="content">
+                            <img src="https://acortar.link/tdx4Fz" alt="classic_burger">
+                            <h3>Classic Burger</h3>
+                            <span class="price">$5 - $10</span>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <a href="#order-now" class="btn_" >Order Now</a>
+                        </div>
+                </div>
+            </div>
+        </section>
+    
     </body>
  </html>
