--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         <section id="home">
 
             <div class="home_container container">
-
                 <h2 class="home_title">We are Bite Burger  😋</h2>
                 <p class="home_description">We are a enterprice that has gained 
                 recognition for our exceptional burgers, which are quite large,
@@ -50,7 +49,7 @@
                 </div>
 
                 <div class="home_img">
-                    <img src="https://acortar.link/ChhiB5" alt="burger">
+                    <img src="img/Principal.png" alt="burger">
                 </div>
 
             </div>
@@ -58,16 +57,20 @@
         </section>
         
         <section id="products">
+
             <div class="products_container container">
                 <h2 class="products_title">Products</h2>
                 <p class="products_description">The types of burgers we produce are 
                 as follows.
                 </p>
+
                 <div class="burger_container">
+
                         <div class="content">
-                            <img src="https://acortar.link/tdx4Fz" alt="classic_burger">
+                            <img src="img/Classic_burger.png" alt="classic_burger">
                             <h3>Classic Burger</h3>
                             <span class="price">$5 - $10</span>
+
                             <div class="stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -75,12 +78,16 @@
                                 <i class="fas fa-star"></i>
                                 <i class="far fa-star"></i>
                             </div>
+
                             <a href="#order-now" class="btn_" >Order Now</a>
+
                         </div>
+
                         <div class="content">
-                            <img src="https://acortar.link/tdx4Fz" alt="classic-burger">
+                            <img src="img/Classic_burger.png" alt="classic-burger">
                             <h3>Classic Burger</h3>
                             <span class="price">$5 - $10</span>
+
                             <div class="stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -88,12 +95,16 @@
                                 <i class="fas fa-star"></i>
                                 <i class="far fa-star"></i>
                             </div>
+
                             <a href="#order-now" class="btn_" >Order Now</a>
+
                         </div>
+
                         <div class="content">
-                            <img src="https://acortar.link/tdx4Fz" alt="classic-burger">
+                            <img src="img/Classic_burger.png" alt="classic-burger">
                             <h3>Classic Burger</h3>
                             <span class="price">$5 - $10</span>
+
                             <div class="stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -101,12 +112,15 @@
                                 <i class="fas fa-star"></i>
                                 <i class="far fa-star"></i>
                             </div>
+
                             <a href="#order-now" class="btn_" >Order Now</a>
                         </div>
+
                         <div class="content">
-                            <img src="https://acortar.link/tdx4Fz" alt="classic_burger">
+                            <img src="img/Classic_burger.png" alt="classic_burger">
                             <h3>Classic Burger</h3>
                             <span class="price">$5 - $10</span>
+
                             <div class="stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -114,8 +128,28 @@
                                 <i class="fas fa-star"></i>
                                 <i class="far fa-star"></i>
                             </div>
+
                             <a href="#order-now" class="btn_" >Order Now</a>
+
                         </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <section id="services">
+            <div class="services_container">
+                <h2>Services</h2>
+                <p>These are all the services we offer to our clients</p>
+                <div class="services_icons_container">
+                    <img src="assets/movil.svg" class="services_icons" alt="movil">
+                    <span>Customer Support</span>
+                    <img src="assets/store.svg" class="services_icons" alt="store">
+                    <span>Pick up in store</span>
+                    <img src="assets/delivery.svg" class="services_icons" alt="delivery">
+                    <span>Home service</span>
                 </div>
             </div>
         </section>
